# z80-tracer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  WIRING.md  gpio-pins.txt  main.c  performance-optimization-notes.md  psram.c  psram.h  test-irq.txt  test_irq.c  test_raw.c  test_wait.c  trace.txt  tusb_config.h  wiring-guide.html  z80-bus-analyzer-statemachine.html  z80-bus-analyzer-statemachine.md  z80_trace.h  z80_trace.pio
client/: capture.py  capture_test.py  gen_trace.py  main.py  memory_trace.py  test_trace.py  trace_filter.py  z80_decoder.py  z80_loop.py  z80_state.py
psram_test/: CMakeLists.txt  main.c
usb_bench/: CMakeLists.txt  bench.py  main.c
wait_test/: CMakeLists.txt  main.c
